# cel

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cuda/: CMakeLists.txt  matrix_add.cu  matrix_add.h
include/Dialect/IR/: CMakeLists.txt  CelAttr.td  CelOps.hpp  CelOps.td  CelType.td
include/Parser/: attribute.hpp  edge.hpp  model.hpp  node.hpp  onnx.pb.h  onnx_parser.hpp  parser.hpp  tensor.hpp  tensor_utils.hpp  tesnsor.hpp  utils.hpp
include/Parser/Compute/: add.hpp  conv.hpp  flatten.hpp  gemm.hpp  globalaveragepool.hpp  maxpool.hpp  relu.hpp  utils.hpp
include/Parser/OnnxNodes/: add.hpp  conv.hpp  flatten.hpp  gemm.hpp  gen_file.py  globalaveragepool.hpp  initializer.hpp  input.hpp  maxpool.hpp  nodes.hpp  output.hpp  relu.hpp  template.txt
include/Utils/: common.hpp
python/quant/: Kl.py  awq.py  basic.py  dequant.py  kl.py  new_kl.py  quant.md  smoothquant.py  utils.py
python/quant/llm_quant/: awq.py
src/: CMakeLists.txt
src/Dialect/IR/: CMakeLists.txt  CelDialect.cpp  CelOps.cpp
src/Parser/: CMakeLists.txt  attribute.cc  edge.cc  model.cc  node.cc  onnx.pb.cc  onnx_parser.cc  tensor.cc  tensor_utils.cc
src/Parser/Compute/: CMakeLists.txt  add.cc  conv.cc  flatten.cc  gemm.cc  globalaveragepool.cc  maxpool.cc  relu.cc
src/Parser/OnnxNodes/: add.cc  conv.cc  flatten.cc  gemm.cc  globalaveragepool.cc  initializer.cc  input.cc  maxpool.cc  output.cc  relu.cc
src/Utils/: CMakeLists.txt  common.cpp
test/: CMakeLists.txt  test_add.cc  test_arma.cpp  test_attribute.cpp  test_node.cpp  test_onnx_forward.cpp  test_onnx_parser.cpp  test_ops.cpp  test_ops.py  test_opt.cpp  test_parser.cpp  test_tensor.cpp  test_val.cpp
test/python/: gen.py  test_quant.py  test_script.py  test_utils.py  val.py
val/: quant.py
